# homeland-backend

./: .env  .gitignore  Cargo.toml  README.md
config/: default.json  production.json  test.json
docs/: sqlx.md
entity/: Cargo.toml
entity/src/: lib.rs  user.rs
migrations/: 20230825063727_create_comment.down.sql  20230825063727_create_comment.up.sql  20230825063732_create_category.down.sql  20230825063732_create_category.up.sql  20230825063740_create_post.up.sql  20230825063757_create_storage.down.sql  20230825063757_create_storage.up.sql  20230825063805_create_user.down.sql  20230825063805_create_user.up.sql  20230825063827_create_notification.down.sql  20230825063827_create_notification.up.sql  20230825065057_create_like.down.sql  20230825065057_create_like.up.sql  20230928011248_create_base.up.sql
src/: error.rs  lib.rs  logger.rs  main.rs  settings.rs
src/app/: jwt.rs  mod.rs
src/app/router/: github.rs  graphql.rs  mod.rs
src/app/schema/: health.rs  mod.rs
src/lib/: oss_client.rs
