[workspace]
members = [".", "entity"]

[workspace.dependencies]
log = "0.4"
dotenvy = "0.15"
anyhow = "1.0"
chrono = "0.4"

tokio = { version = "1", features = ["full"] }
arel = { version = "0.3.2" }

entity = { path = "./entity" }
# ================= end workspace =================

[package]
name = "homeland-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
