[workspace]
members = [".", "entity"]

[workspace.dependencies]
log = "0.4"
dotenvy = "0.15"
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0" }

once_cell = "1.18"
tokio = { version = "1", features = ["full"] }
sqlx = "0.7.2"
arel = { version = "0.3.2" }

entity = { path = "./entity" }
# ================= end workspace =================

[package]
name = "homeland-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.1"
config = "0.13"

anyhow = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }

once_cell = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
arel = { workspace = true }
entity = { workspace = true }
