[workspace]
members = [".", "entity"]

[workspace.dependencies]
log = "0.4"
dotenvy = "0.15"
thiserror = "1.0"
anyhow = "1.0"
time = "0.3"
chrono = "0.4"
serde = { version = "1.0" }
serde_json = "1"
serde_qs = "0.12"

once_cell = "1.18"
tokio = { version = "1", features = ["full"] }
sqlx = "0.7.2"
reqwest = { version = "0.11", features = ["json"] }
arel = { version = "0.3.8" }

entity = { path = "./entity" }
# ================= end workspace =================

[package]
name = "homeland-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.1"
config = "0.13"

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_qs = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }

once_cell = { workspace = true }
slab = "0.4"
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["time"] }
time = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
arel = { workspace = true }
entity = { workspace = true }

reqwest = { workspace = true }
aliyun-oss-client = "0.12"
jsonwebtoken = "8"
axum = { version = "0.6", features = ["headers", "multipart"] }
axum-extra = { version = "0.7", features = ["cookie"] }
tower-http = { version = "0.4", features = ["cors"] }
async-graphql = { version = "5", features = ["apollo_tracing"] }
async-graphql-axum = "5"
